rt/test/errors/032/test.volt
//T macro:import
module test;

import m2;

fn main() i32
{
	return pubadd(3, 3) - 6;
}
